[project]
name = "examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "envdot>=1.0.29",
    "httpx[socks]>=0.28.1",
    "langchain>=1.2.13",
    "langchain-deepseek>=1.0.1",
    "langchain-ollama>=1.0.1",
    "pathlib3>=1.0.14",
]
